# dynamic-dispatch-rs

./: Cargo.toml  README.md
dynamic-dispatch-proc-macro/: Cargo.toml
dynamic-dispatch-proc-macro/src/: lib.rs
src/: lib.rs
