[package]
name = "dynamic-dispatch-proc-macro"
version = "0.5.0"
authors = ["Andrea Cracco <guilucand@gmail.com>"]
edition = "2021"
categories = []
description = "Proc macros for dynamic dispatch crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Guilucand/dynamic-dispatch-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.56"
quote = "1.0.26"
regex = "1.8.1"
syn = { version = "2.0.15", features = ["full"] }

